--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.13"
+    "msnodesqlv8": "^4.1.2",
+    "mssql": "^10.0.2",
+    "nodemailer": "^6.9.13",
+    "stream": "^0.0.2",
+    "tedious": "^18.1.0"
   }
 }
