--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.2",
     "nodemailer": "^6.9.13",
+    "otp-generator": "^4.0.1",
+    "springedge": "^1.0.6",
     "stream": "^0.0.2",
     "tedious": "^18.1.0"
   }
