--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.2",
     "nodemailer": "^6.9.13",
