--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
+    "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.0",
     "moment": "^2.30.1",
     "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.1",
     "springedge": "^1.0.6",
